result/DAZZ_DB.txt

smatch check :
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:941 Load_QVs() error: uninitialized symbol 'last'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:1731 List_DB_Files() warn: variable dereferenced before check 'root' (see line 1729)
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:315 main() error: uninitialized symbol 'last'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:328 main() error: uninitialized symbol 'eof'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:364 main() error: uninitialized symbol 'cline'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:393 main() error: uninitialized symbol 'eof'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:405 main() error: uninitialized symbol 'rlen'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:471 main() error: uninitialized symbol 'eof'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DAM.c:590 main() error: uninitialized symbol 'ufirst'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DAM.c:617 main() error: uninitialized symbol 'tfirst'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DB.c:378 main() warn: passing freed memory 'core'
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DB.c:647 main() error: uninitialized symbol 'ufirst'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DB.c:674 main() error: uninitialized symbol 'tfirst'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/quiva2DB.c:329 main() error: uninitialized symbol 'last'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/quiva2DB.c:393 main() error: uninitialized symbol 'cline'.
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/quiva2DB.c:459 main() warn: passing freed memory 'core'
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/simulator.c:244 load_and_fill() warn: signed overflow undefined. 'u + reads[i - 1]->rlen < u'
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/simulator.c:459 shotgun() warn: inconsistent indenting

cppcheck:
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/Catrack.c:111:18: warning: Possible null pointer dereference: lfile [nullPointer]
          fclose(lfile);
                 ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/Catrack.c:92:19: note: Assignment 'lfile=NULL', assigned value is 0
    FILE *lfile = NULL;
                  ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/Catrack.c:111:18: note: Null pointer dereference
          fclose(lfile);
                 ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:65:3: error: Returning/dereferencing 'p' after it is deallocated / released [deallocret]
  return (p);
  ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:59:12: note: Returning/dereferencing 'p' after it is deallocated / released
  if ((p = realloc(p,size)) == NULL)
           ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:65:3: note: Returning/dereferencing 'p' after it is deallocated / released
  return (p);
  ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:153:12: error: Common realloc mistake: 'cat' nulled but not freed upon failure [memleakOnRealloc]
      if ((cat = (char *) realloc(cat,max+1)) == NULL)
           ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:173:12: error: Common realloc mistake: 'suffix' nulled but not freed upon failure [memleakOnRealloc]
      if ((suffix = (char *) realloc(suffix,max+1)) == NULL)
           ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBdump.c:755:23: warning: Possible null pointer dereference: iter [nullPointer]
              { fst = iter->beg;
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBdump.c:662:14: note: Assignment 'iter=NULL', assigned value is 0
      iter = NULL;
             ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBdump.c:755:23: note: Null pointer dereference
              { fst = iter->beg;
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBdump.c:756:23: warning: Possible null pointer dereference: iter [nullPointer]
                lst = iter->end;
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBdump.c:662:14: note: Assignment 'iter=NULL', assigned value is 0
      iter = NULL;
             ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBdump.c:756:23: note: Null pointer dereference
                lst = iter->end;
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:566:43: warning: Possible null pointer dereference: entry [nullPointer]
                  printf("%.*s\n",lst-fst,entry[k]+fst);
                                          ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:433:17: note: Assignment 'entry=NULL', assigned value is 0
      { entry = NULL;
                ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:566:43: note: Null pointer dereference
                  printf("%.*s\n",lst-fst,entry[k]+fst);
                                          ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:462:22: error: Uninitialized variable: reps [uninitvar]
          { if (c >= reps)
                     ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:465:17: error: Uninitialized variable: pts [uninitvar]
            e = pts[c+1];
                ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:533:31: error: Uninitialized variable: arrow [uninitvar]
              Load_Arrow(db,i,arrow,1);
                              ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:572:41: error: Uninitialized variable: arrow [uninitvar]
                  printf("%.*s\n",WIDTH,arrow+k);
                                        ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:574:41: error: Uninitialized variable: arrow [uninitvar]
                  printf("%.*s\n",lst-k,arrow+k);
                                        ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:603:49: error: Uninitialized variable: arrow [uninitvar]
                        printf("%.*s\n\n",WIDTH,arrow+j);
                                                ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBshow.c:608:49: error: Uninitialized variable: arrow [uninitvar]
                        printf("%.*s\n\n",lst-j,arrow+j);
                                                ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:445:23: error: Common realloc mistake: 'read' nulled but not freed upon failure [memleakOnRealloc]
                      read = (char *) realloc(read,rmax+1);
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/arrow2DB.c:316:26: error: Uninitialized variable: fname [uninitvar]
            strcpy(lname,fname);
                         ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DAM.c:463:23: error: Common realloc mistake: 'read' nulled but not freed upon failure [memleakOnRealloc]
                      read = (char *) realloc(read,rmax+1);
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DAM.c:256:17: error: Uninitialized variable: db [uninitvar]
        fwrite(&db,sizeof(HITS_DB),1,indx);
                ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DB.c:498:23: error: Common realloc mistake: 'read' nulled but not freed upon failure [memleakOnRealloc]
                      read = (char *) realloc(read,rmax+1);
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DB.c:535:23: error: Common realloc mistake: 'prec' nulled but not freed upon failure [memleakOnRealloc]
                      prec = (HITS_READ *) realloc(prec,sizeof(HITS_READ)*pmax);
                      ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/fasta2DB.c:251:17: error: Uninitialized variable: db [uninitvar]
        fwrite(&db,sizeof(HITS_DB),1,indx);
                ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/quiva2DB.c:330:26: error: Uninitialized variable: fname [uninitvar]
            strcpy(lname,fname);
                         ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:403:13: error: Using argument db that points at uninitialized variable db [ctuuninitvar]
  dbcopy = *db;
            ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DBsplit.c:92:19: note: Calling function Open_DB, 2nd argument is uninitialized
  status = Open_DB(argv[1],&db);
                  ^
/home/lsc20011130/CTestRobot/projects/DAZZ_DB/DB.c:403:13: note: Using argument db
  dbcopy = *db;
            ^
